1.7版本同步