@@ -629,12 +629,28 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
      * 也可以根据实际需求，单独调用该函数所包含的各个数据集成函数。
      * NOTE: 该方法内执行的SQL将禁用数据权限过滤。
      *
-     * @param resultList      主表实体对象列表。数据集成将直接作用于该对象列表。
-     * @param relationParam   实体对象数据组装的参数构建器。
+     * @param resultList    主表实体对象列表。数据集成将直接作用于该对象列表。
+     * @param relationParam 实体对象数据组装的参数构建器。
      * @throws RemoteDataBuildException ignoreRpcError()方法返回false，同时远程服务调用出现错误时抛出此异常。
      */
     @Override
     public void buildRelationForDataList(List<M> resultList, MyRelationParam relationParam) {
+        this.buildRelationForDataList(resultList, relationParam, null);
+    }
+
+    /**
+     * 集成所有与主表实体对象相关的关联数据列表。包括本地和远程服务的一对一、字典、一对多和多对多聚合运算等。
+     * 也可以根据实际需求，单独调用该函数所包含的各个数据集成函数。
+     * NOTE: 该方法内执行的SQL将禁用数据权限过滤。
+     *
+     * @param resultList      主表实体对象列表。数据集成将直接作用于该对象列表。
+     * @param relationParam   实体对象数据组装的参数构建器。
+     * @param ignoreFields  该集合中的字段，即便包含注解也不会在当前调用中进行数据组装。
+     * @throws RemoteDataBuildException ignoreRpcError()方法返回false，同时远程服务调用出现错误时抛出此异常。
+     */
+    @Override
+    public void buildRelationForDataList(
+            List<M> resultList, MyRelationParam relationParam, Set<String> ignoreFields) {
         if (relationParam == null || CollectionUtils.isEmpty(resultList)) {
             return;
         }
@@ -645,40 +661,40 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
             boolean buildOneToOne = relationParam.isBuildOneToOne() || relationParam.isBuildOneToOneWithDict();
             // 这里集成一对一关联。
             if (buildOneToOne) {
-                this.buildOneToOneForDataList(resultList, relationParam.isBuildOneToOneWithDict());
+                this.buildOneToOneForDataList(resultList, relationParam.isBuildOneToOneWithDict(), ignoreFields);
             }
             // 集成一对多关联
             if (relationParam.isBuildOneToMany()) {
-                this.buildOneToManyForDataList(resultList);
+                this.buildOneToManyForDataList(resultList, ignoreFields);
             }
             // 这里集成字典关联
             if (relationParam.isBuildDict()) {
                 // 构建常量字典关联关系
-                this.buildConstDictForDataList(resultList);
-                this.buildDictForDataList(resultList, buildOneToOne);
+                this.buildConstDictForDataList(resultList, ignoreFields);
+                this.buildDictForDataList(resultList, buildOneToOne, ignoreFields);
             }
             // 集成远程一对一和字段级别的数据关联。
             boolean buildRemoteOneToOne =
                     relationParam.isBuildRemoteOneToOne() || relationParam.isBuildRemoteOneToOneWithDict();
             if (buildRemoteOneToOne) {
-                this.buildRemoteOneToOneForDataList(resultList, relationParam.isBuildRemoteOneToOneWithDict());
+                this.buildRemoteOneToOneForDataList(resultList, relationParam.isBuildRemoteOneToOneWithDict(), ignoreFields);
             }
             if (relationParam.isBuildRemoteDict()) {
-                this.buildRemoteDictForDataList(resultList, buildRemoteOneToOne);
+                this.buildRemoteDictForDataList(resultList, buildRemoteOneToOne, ignoreFields);
             }
             // 组装本地聚合计算关联数据
             if (relationParam.isBuildAggregation()) {
                 // 处理多一多场景下，根据主表的结果，进行从表聚合数据的计算。
-                this.buildOneToManyAggregationForDataList(resultList, buildAggregationAdditionalWhereCriteria());
+                this.buildOneToManyAggregationForDataList(resultList, buildAggregationAdditionalWhereCriteria(), ignoreFields);
                 // 处理多对多场景下，根据主表的结果，进行从表聚合数据的计算。
-                this.buildManyToManyAggregationForDataList(resultList, buildAggregationAdditionalWhereCriteria());
+                this.buildManyToManyAggregationForDataList(resultList, buildAggregationAdditionalWhereCriteria(), ignoreFields);
             }
             // 组装远程聚合计算关联数据
             if (relationParam.isBuildRemoteAggregation()) {
                 // 一对多场景。
-                this.buildRemoteOneToManyAggregationForDataList(resultList, buildAggregationAdditionalWhereCriteria());
+                this.buildRemoteOneToManyAggregationForDataList(resultList, buildAggregationAdditionalWhereCriteria(), ignoreFields);
                 // 处理多对多场景。
-                this.buildRemoteManyToManyAggregationForDataList(resultList, buildAggregationAdditionalWhereCriteria());
+                this.buildRemoteManyToManyAggregationForDataList(resultList, buildAggregationAdditionalWhereCriteria(), ignoreFields);
             }
         } finally {
             GlobalThreadLocal.setDataFilter(dataFilterValue);
@@ -703,6 +719,29 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
      */
     @Override
     public void buildRelationForDataList(List<M> resultList, MyRelationParam relationParam, int batchSize) {
+        this.buildRelationForDataList(resultList, relationParam, batchSize, null);
+    }
+
+    /**
+     * 该函数主要用于对查询结果的批量导出。不同于支持分页的列表查询，批量导出没有分页机制，
+     * 因此在导出数据量较大的情况下，很容易给数据库的内存、CPU和IO带来较大的压力。而通过
+     * 我们的分批处理，可以极大的规避该问题的出现几率。调整batchSize的大小，也可以有效的
+     * 改善运行效率。
+     * 我们目前的处理机制是，先从主表取出所有符合条件的主表数据，这样可以避免分批处理时，
+     * 后面几批数据，因为skip过多而带来的效率问题。因为是单表过滤，不会给数据库带来过大的压力。
+     * 之后再在主表结果集数据上进行分批级联处理。
+     * 集成所有与主表实体对象相关的关联数据列表。包括一对一、字典、一对多和多对多聚合运算等。
+     * 也可以根据实际需求，单独调用该函数所包含的各个数据集成函数。
+     * NOTE: 该方法内执行的SQL将禁用数据权限过滤。
+     *
+     * @param resultList    主表实体对象列表。数据集成将直接作用于该对象列表。
+     * @param relationParam 实体对象数据组装的参数构建器。
+     * @param batchSize     每批集成的记录数量。小于等于时将不做分批处理。
+     * @param ignoreFields  该集合中的字段，即便包含注解也不会在当前调用中进行数据组装。
+     */
+    @Override
+    public void buildRelationForDataList(
+            List<M> resultList, MyRelationParam relationParam, int batchSize, Set<String> ignoreFields) {
         if (CollectionUtils.isEmpty(resultList)) {
             return;
         }
@@ -726,13 +765,29 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
      * 也可以根据实际需求，单独调用该函数所包含的各个数据集成函数。
      * NOTE: 该方法内执行的SQL将禁用数据权限过滤。
      *
-     * @param dataObject      主表实体对象。数据集成将直接作用于该对象。
-     * @param relationParam   实体对象数据组装的参数构建器。
-     * @param <T>             实体对象类型。
+     * @param dataObject    主表实体对象。数据集成将直接作用于该对象。
+     * @param relationParam 实体对象数据组装的参数构建器。
+     * @param <T>           实体对象类型。
      * @throws RemoteDataBuildException ignoreRpcError()方法返回false，同时远程服务调用出现错误时抛出此异常。
      */
     @Override
     public <T extends M> void buildRelationForData(T dataObject, MyRelationParam relationParam) {
+        this.buildRelationForData(dataObject, relationParam, null);
+    }
+
+    /**
+     * 集成所有与主表实体对象相关的关联数据对象。包括本地和远程服务的一对一、字典、一对多和多对多聚合运算等。
+     * 也可以根据实际需求，单独调用该函数所包含的各个数据集成函数。
+     * NOTE: 该方法内执行的SQL将禁用数据权限过滤。
+     *
+     * @param dataObject    主表实体对象。数据集成将直接作用于该对象。
+     * @param relationParam 实体对象数据组装的参数构建器。
+     * @param ignoreFields  该集合中的字段，即便包含注解也不会在当前调用中进行数据组装。
+     * @param <T>           实体对象类型。
+     * @throws RemoteDataBuildException ignoreRpcError()方法返回false，同时远程服务调用出现错误时抛出此异常。
+     */
+    @Override
+    public <T extends M> void buildRelationForData(T dataObject, MyRelationParam relationParam, Set<String> ignoreFields) {
         if (dataObject == null || relationParam == null) {
             return;
         }
@@ -741,42 +796,42 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
             // 集成本地一对一和字段级别的数据关联。
             boolean buildOneToOne = relationParam.isBuildOneToOne() || relationParam.isBuildOneToOneWithDict();
             if (buildOneToOne) {
-                this.buildOneToOneForData(dataObject, relationParam.isBuildOneToOneWithDict());
+                this.buildOneToOneForData(dataObject, relationParam.isBuildOneToOneWithDict(), ignoreFields);
             }
             // 集成一对多关联
             if (relationParam.isBuildOneToMany()) {
-                this.buildOneToManyForData(dataObject);
+                this.buildOneToManyForData(dataObject, ignoreFields);
             }
             if (relationParam.isBuildDict()) {
                 // 构建常量字典关联关系
-                this.buildConstDictForData(dataObject);
+                this.buildConstDictForData(dataObject, ignoreFields);
                 // 构建本地数据字典关联关系。
-                this.buildDictForData(dataObject, buildOneToOne);
+                this.buildDictForData(dataObject, buildOneToOne, ignoreFields);
             }
             boolean buildRemoteOneToOne =
                     relationParam.isBuildRemoteOneToOne() || relationParam.isBuildRemoteOneToOneWithDict();
             if (buildRemoteOneToOne) {
-                this.buildRemoteOneToOneForData(dataObject, relationParam.isBuildRemoteOneToOneWithDict());
+                this.buildRemoteOneToOneForData(dataObject, relationParam.isBuildRemoteOneToOneWithDict(), ignoreFields);
             }
             if (relationParam.isBuildRemoteDict()) {
-                this.buildRemoteDictForData(dataObject, buildRemoteOneToOne);
+                this.buildRemoteDictForData(dataObject, buildRemoteOneToOne, ignoreFields);
             }
             // 组装本地聚合计算关联数据
             if (relationParam.isBuildAggregation()) {
                 // 构建一对多场景
-                buildOneToManyAggregationForData(dataObject, buildAggregationAdditionalWhereCriteria());
+                buildOneToManyAggregationForData(dataObject, buildAggregationAdditionalWhereCriteria(), ignoreFields);
                 // 开始处理多对多场景。
-                buildManyToManyAggregationForData(dataObject, buildAggregationAdditionalWhereCriteria());
+                buildManyToManyAggregationForData(dataObject, buildAggregationAdditionalWhereCriteria(), ignoreFields);
             }
             // 组装远程聚合计算关联数据
             if (relationParam.isBuildRemoteAggregation()) {
                 // 处理一对多场景
-                this.buildRemoteOneToManyAggregationForData(dataObject, buildAggregationAdditionalWhereCriteria());
+                this.buildRemoteOneToManyAggregationForData(dataObject, buildAggregationAdditionalWhereCriteria(), ignoreFields);
                 // 处理多对多场景
-                this.buildRemoteManyToManyAggregationForData(dataObject, buildAggregationAdditionalWhereCriteria());
+                this.buildRemoteManyToManyAggregationForData(dataObject, buildAggregationAdditionalWhereCriteria(), ignoreFields);
             }
             if (relationParam.isBuildRelationManyToMany()) {
-                this.buildRelationManyToMany(dataObject);
+                this.buildRelationManyToMany(dataObject, ignoreFields);
             }
         } finally {
             GlobalThreadLocal.setDataFilter(dataFilterValue);
@@ -786,13 +841,17 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
     /**
      * 为参数列表数据集成本地静态字典关联数据。
      *
-     * @param resultList 主表数据列表。
+     * @param resultList   主表数据列表。
+     * @param ignoreFields 该集合中的字段，即便包含注解也不会在当前调用中进行数据组装。
      */
-    private void buildConstDictForDataList(List<M> resultList) {
+    private void buildConstDictForDataList(List<M> resultList, Set<String> ignoreFields) {
         if (CollectionUtils.isEmpty(this.relationConstDictStructList) || CollectionUtils.isEmpty(resultList)) {
             return;
         }
         for (LocalRelationStruct relationStruct : this.relationConstDictStructList) {
+            if (ignoreFields != null && ignoreFields.contains(relationStruct.relationField.getName())) {
+                continue;
+            }
             for (M dataObject : resultList) {
                 Object id = ReflectUtil.getFieldValue(dataObject, relationStruct.masterIdField);
                 if (id != null) {
@@ -811,13 +870,17 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
     /**
      * 为参数实体对象数据集成本地静态字典关联数据。
      *
-     * @param dataObject 实体对象。
+     * @param dataObject   实体对象。
+     * @param ignoreFields 该集合中的字段，即便包含注解也不会在当前调用中进行数据组装。
      */
-    private <T extends M> void buildConstDictForData(T dataObject) {
+    private <T extends M> void buildConstDictForData(T dataObject, Set<String> ignoreFields) {
         if (dataObject == null || CollectionUtils.isEmpty(this.relationConstDictStructList)) {
             return;
         }
         for (LocalRelationStruct relationStruct : this.relationConstDictStructList) {
+            if (ignoreFields != null && ignoreFields.contains(relationStruct.relationField.getName())) {
+                continue;
+            }
             Object id = ReflectUtil.getFieldValue(dataObject, relationStruct.masterIdField);
             if (id != null) {
                 String name = relationStruct.dictMap.get(id);
@@ -834,13 +897,17 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
     /**
      * 集成主表和多对多中间表之间的关联关系。
      *
-     * @param dataObject 关联后的主表数据对象。
+     * @param dataObject   关联后的主表数据对象。
+     * @param ignoreFields 该集合中的字段，即便包含注解也不会在当前调用中进行数据组装。
      */
-    private <T extends M> void buildRelationManyToMany(T dataObject) {
+    private <T extends M> void buildRelationManyToMany(T dataObject, Set<String> ignoreFields) {
         if (dataObject == null || CollectionUtils.isEmpty(this.localRelationManyToManyStructList)) {
             return;
         }
         for (LocalRelationStruct relationStruct : this.localRelationManyToManyStructList) {
+            if (ignoreFields != null && ignoreFields.contains(relationStruct.relationField.getName())) {
+                continue;
+            }
             Object masterIdValue = ReflectUtil.getFieldValue(dataObject, relationStruct.masterIdField);
             Example e = new Example(relationStruct.relationManyToMany.relationModelClass());
             e.createCriteria().andEqualTo(relationStruct.masterIdField.getName(), masterIdValue);
@@ -852,15 +919,19 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
     /**
      * 为实体对象参数列表数据集成远程一对一关联数据。
      *
-     * @param resultList 实体对象数据列表。
-     * @param withDict   关联从表数据后，是否把从表的字典数据也一起关联了。
+     * @param resultList   实体对象数据列表。
+     * @param withDict     关联从表数据后，是否把从表的字典数据也一起关联了。
+     * @param ignoreFields 该集合中的字段，即便包含注解也不会在当前调用中进行数据组装。
      * @throws RemoteDataBuildException ignoreRpcError()方法返回false，同时远程服务调用出现错误时抛出此异常。
      */
-    private void buildRemoteOneToOneForDataList(List<M> resultList, boolean withDict) {
+    private void buildRemoteOneToOneForDataList(List<M> resultList, boolean withDict, Set<String> ignoreFields) {
         if (CollectionUtils.isEmpty(this.remoteRelationOneToOneStructList) || CollectionUtils.isEmpty(resultList)) {
             return;
         }
         for (RemoteRelationStruct relationStruct : this.remoteRelationOneToOneStructList) {
+            if (ignoreFields != null && ignoreFields.contains(relationStruct.relationField.getName())) {
+                continue;
+            }
             Set<Object> masterIdSet = resultList.stream()
                     .map(obj -> ReflectUtil.getFieldValue(obj, relationStruct.masterIdField))
                     .filter(Objects::nonNull)
@@ -889,34 +960,37 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
     /**
      * 为实体对象数据集成远程一对一关联数据。
      *
-     * @param dataObject 实体对象。
-     * @param withDict   关联从表数据后，是否把从表的字典数据也一起关联了。
+     * @param dataObject   实体对象。
+     * @param withDict     关联从表数据后，是否把从表的字典数据也一起关联了。
+     * @param ignoreFields 该集合中的字段，即便包含注解也不会在当前调用中进行数据组装。
      * @throws RemoteDataBuildException ignoreRpcError()方法返回false，同时远程服务调用出现错误时抛出此异常。
      */
-    private <T extends M> void buildRemoteOneToOneForData(T dataObject, boolean withDict) {
+    private <T extends M> void buildRemoteOneToOneForData(T dataObject, boolean withDict, Set<String> ignoreFields) {
         if (dataObject == null || CollectionUtils.isEmpty(this.remoteRelationOneToOneStructList)) {
             return;
         }
         for (RemoteRelationStruct relationStruct : this.remoteRelationOneToOneStructList) {
-            Object id = ReflectUtil.getFieldValue(dataObject, relationStruct.masterIdField);
-            if (id == null) {
+            if (ignoreFields != null && ignoreFields.contains(relationStruct.relationField.getName())) {
                 continue;
             }
-            MyQueryParam queryParam = new MyQueryParam(withDict);
-            queryParam.setUseDataFilter(false);
-            MyWhereCriteria whereCriteria = new MyWhereCriteria();
-            whereCriteria.setCriteria(
-                    relationStruct.relationOneToOne.slaveIdField(), MyWhereCriteria.OPERATOR_EQUAL, id);
-            queryParam.addCriteriaList(whereCriteria);
-            ResponseResult<Object> result = relationStruct.remoteClient.getBy(queryParam);
-            if (result.isSuccess()) {
-                Object relationObject = this.normalizeData(
-                        result.getData(), relationStruct.relationOneToOne.slaveModelClass());
-                if (relationObject != null) {
-                    ReflectUtil.setFieldValue(dataObject, relationStruct.relationField, relationObject);
+            Object id = ReflectUtil.getFieldValue(dataObject, relationStruct.masterIdField);
+            if (id != null) {
+                MyQueryParam queryParam = new MyQueryParam(withDict);
+                queryParam.setUseDataFilter(false);
+                MyWhereCriteria whereCriteria = new MyWhereCriteria();
+                whereCriteria.setCriteria(
+                        relationStruct.relationOneToOne.slaveIdField(), MyWhereCriteria.OPERATOR_EQUAL, id);
+                queryParam.addCriteriaList(whereCriteria);
+                ResponseResult<Object> result = relationStruct.remoteClient.getBy(queryParam);
+                if (result.isSuccess()) {
+                    Object relationObject = this.normalizeData(
+                            result.getData(), relationStruct.relationOneToOne.slaveModelClass());
+                    if (relationObject != null) {
+                        ReflectUtil.setFieldValue(dataObject, relationStruct.relationField, relationObject);
+                    }
+                } else {
+                    this.logErrorOrThrowException(result.getErrorMessage());
                 }
-            } else {
-                this.logErrorOrThrowException(result.getErrorMessage());
             }
         }
     }
@@ -927,13 +1001,17 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
      * @param resultList       实体对象数据列表。
      * @param hasBuiltOneToOne 性能优化参数。如果该值为true，同时注解参数RelationDict.equalOneToOneRelationField
      *                         不为空，则直接从已经完成一对一数据关联的从表对象中获取数据，减少一次数据库交互。
+     * @param ignoreFields     该集合中的字段，即便包含注解也不会在当前调用中进行数据组装。
      * @throws RemoteDataBuildException ignoreRpcError()方法返回false，同时远程服务调用出现错误时抛出此异常。
      */
-    private void buildRemoteDictForDataList(List<M> resultList, boolean hasBuiltOneToOne) {
+    private void buildRemoteDictForDataList(List<M> resultList, boolean hasBuiltOneToOne, Set<String> ignoreFields) {
         if (CollectionUtils.isEmpty(this.remoteRelationDictStructList) || CollectionUtils.isEmpty(resultList)) {
             return;
         }
         for (RemoteRelationStruct relationStruct : this.remoteRelationDictStructList) {
+            if (ignoreFields != null && ignoreFields.contains(relationStruct.relationField.getName())) {
+                continue;
+            }
             List<Object> relationList = null;
             if (hasBuiltOneToOne && relationStruct.equalOneToOneRelationField != null) {
                 relationList = resultList.stream()
@@ -973,13 +1051,17 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
      * @param dataObject       实体对象。
      * @param hasBuiltOneToOne 性能优化参数。如果该值为true，同时注解参数RelationDict.equalOneToOneRelationField
      *                         不为空，则直接从已经完成一对一数据关联的从表对象中获取数据，减少一次数据库交互。
+     * @param ignoreFields     该集合中的字段，即便包含注解也不会在当前调用中进行数据组装。
      * @throws RemoteDataBuildException ignoreRpcError()方法返回false，同时远程服务调用出现错误时抛出此异常。
      */
-    private <T extends M> void buildRemoteDictForData(T dataObject, boolean hasBuiltOneToOne) {
+    private <T extends M> void buildRemoteDictForData(T dataObject, boolean hasBuiltOneToOne, Set<String> ignoreFields) {
         if (dataObject == null || CollectionUtils.isEmpty(this.remoteRelationDictStructList)) {
             return;
         }
         for (RemoteRelationStruct relationStruct : this.remoteRelationDictStructList) {
+            if (ignoreFields != null && ignoreFields.contains(relationStruct.relationField.getName())) {
+                continue;
+            }
             Object relationObject = null;
             if (hasBuiltOneToOne && relationStruct.equalOneToOneRelationField != null) {
                 relationObject = ReflectUtil.getFieldValue(dataObject, relationStruct.equalOneToOneRelationField);
@@ -1012,9 +1094,10 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
      *
      * @param resultList      实体对象数据列表。
      * @param criteriaListMap 过滤参数。key为主表字段名称，value是过滤条件列表。
+     * @param ignoreFields    该集合中的字段，即便包含注解也不会在当前调用中进行数据组装。
      */
     private void buildRemoteOneToManyAggregationForDataList(
-            List<M> resultList, Map<String, List<MyWhereCriteria>> criteriaListMap) {
+            List<M> resultList, Map<String, List<MyWhereCriteria>> criteriaListMap, Set<String> ignoreFields) {
         if (CollectionUtils.isEmpty(this.remoteRelationOneToManyAggrStructList) || CollectionUtils.isEmpty(resultList)) {
             return;
         }
@@ -1022,6 +1105,9 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
             criteriaListMap = new HashMap<>(this.remoteRelationOneToManyAggrStructList.size());
         }
         for (RemoteRelationStruct relationStruct : this.remoteRelationOneToManyAggrStructList) {
+            if (ignoreFields != null && ignoreFields.contains(relationStruct.relationField.getName())) {
+                continue;
+            }
             Set<Object> masterIdSet = resultList.stream()
                     .map(obj -> ReflectUtil.getFieldValue(obj, relationStruct.masterIdField))
                     .filter(Objects::nonNull)
@@ -1063,9 +1149,10 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
      *
      * @param dataObject      实体对象。
      * @param criteriaListMap 过滤参数。key为主表字段名称，value是过滤条件列表。
+     * @param ignoreFields    该集合中的字段，即便包含注解也不会在当前调用中进行数据组装。
      */
     private <T extends M> void buildRemoteOneToManyAggregationForData(
-            T dataObject, Map<String, List<MyWhereCriteria>> criteriaListMap) {
+            T dataObject, Map<String, List<MyWhereCriteria>> criteriaListMap, Set<String> ignoreFields) {
         // 处理一对多场景
         if (dataObject == null || CollectionUtils.isEmpty(this.remoteRelationOneToManyAggrStructList)) {
             return;
@@ -1074,6 +1161,9 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
             criteriaListMap = new HashMap<>(this.remoteRelationOneToManyAggrStructList.size());
         }
         for (RemoteRelationStruct relationStruct : this.remoteRelationOneToManyAggrStructList) {
+            if (ignoreFields != null && ignoreFields.contains(relationStruct.relationField.getName())) {
+                continue;
+            }
             Object masterIdValue = ReflectUtil.getFieldValue(dataObject, relationStruct.masterIdField);
             if (masterIdValue == null) {
                 continue;
@@ -1108,9 +1198,10 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
      *
      * @param resultList      实体对象数据列表。
      * @param criteriaListMap 过滤参数。key为主表字段名称，value是过滤条件列表。
+     * @param ignoreFields    该集合中的字段，即便包含注解也不会在当前调用中进行数据组装。
      */
     private void buildRemoteManyToManyAggregationForDataList(
-            List<M> resultList, Map<String, List<MyWhereCriteria>> criteriaListMap) {
+            List<M> resultList, Map<String, List<MyWhereCriteria>> criteriaListMap, Set<String> ignoreFields) {
         if (CollectionUtils.isEmpty(this.remoteRelationManyToManyAggrStructList) || CollectionUtils.isEmpty(resultList)) {
             return;
         }
@@ -1118,6 +1209,9 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
             criteriaListMap = new HashMap<>(this.remoteRelationManyToManyAggrStructList.size());
         }
         for (RemoteRelationStruct relationStruct : this.remoteRelationManyToManyAggrStructList) {
+            if (ignoreFields != null && ignoreFields.contains(relationStruct.relationField.getName())) {
+                continue;
+            }
             Set<Object> masterIdSet = resultList.stream()
                     .map(obj -> ReflectUtil.getFieldValue(obj, relationStruct.masterIdField))
                     .filter(Objects::nonNull)
@@ -1145,9 +1239,10 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
      *
      * @param dataObject      实体对象。
      * @param criteriaListMap 过滤参数。key为主表字段名称，value是过滤条件列表。
+     * @param ignoreFields    该集合中的字段，即便包含注解也不会在当前调用中进行数据组装。
      */
     private <T extends M> void buildRemoteManyToManyAggregationForData(
-            T dataObject, Map<String, List<MyWhereCriteria>> criteriaListMap) {
+            T dataObject, Map<String, List<MyWhereCriteria>> criteriaListMap, Set<String> ignoreFields) {
         if (dataObject == null || CollectionUtils.isEmpty(this.remoteRelationManyToManyAggrStructList)) {
             return;
         }
@@ -1155,6 +1250,9 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
             criteriaListMap = new HashMap<>(this.remoteRelationManyToManyAggrStructList.size());
         }
         for (RemoteRelationStruct relationStruct : this.remoteRelationManyToManyAggrStructList) {
+            if (ignoreFields != null && ignoreFields.contains(relationStruct.relationField.getName())) {
+                continue;
+            }
             Object masterIdValue = ReflectUtil.getFieldValue(dataObject, relationStruct.masterIdField);
             if (masterIdValue == null) {
                 continue;
@@ -1183,15 +1281,19 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
      *       此时，在关联gradeId远程字典时，就可能产生RPC调用。参数ignoreRpcError应用于该远程
      *       调用。
      *
-     * @param resultList 实体对象数据列表。
-     * @param withDict   关联从表数据后，是否把从表的字典数据也一起关联了。
+     * @param resultList   实体对象数据列表。
+     * @param withDict     关联从表数据后，是否把从表的字典数据也一起关联了。
+     * @param ignoreFields 该集合中的字段，即便包含注解也不会在当前调用中进行数据组装。
      * @throws RemoteDataBuildException ignoreRpcError()方法返回false，同时远程服务调用出现错误时抛出此异常。
      */
-    private void buildOneToOneForDataList(List<M> resultList, boolean withDict) {
+    private void buildOneToOneForDataList(List<M> resultList, boolean withDict, Set<String> ignoreFields) {
         if (CollectionUtils.isEmpty(this.localRelationOneToOneStructList) || CollectionUtils.isEmpty(resultList)) {
             return;
         }
         for (LocalRelationStruct relationStruct : this.localRelationOneToOneStructList) {
+            if (ignoreFields != null && ignoreFields.contains(relationStruct.relationField.getName())) {
+                continue;
+            }
             Set<Object> masterIdSet = resultList.stream()
                     .map(obj -> ReflectUtil.getFieldValue(obj, relationStruct.masterIdField))
                     .filter(Objects::nonNull)
@@ -1212,11 +1314,11 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
                 BaseService<Object, Object> proxyTarget =
                         (BaseService<Object, Object>) AopTargetUtil.getTarget(relationService);
                 // 关联常量字典
-                proxyTarget.buildConstDictForDataList(relationList);
+                proxyTarget.buildConstDictForDataList(relationList, ignoreFields);
                 // 关联本地字典。
-                proxyTarget.buildDictForDataList(relationList, false);
+                proxyTarget.buildDictForDataList(relationList, false, ignoreFields);
                 // 关联远程字典。
-                proxyTarget.buildRemoteDictForDataList(relationList, false);
+                proxyTarget.buildRemoteDictForDataList(relationList, false, ignoreFields);
             }
         }
     }
@@ -1224,15 +1326,19 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
     /**
      * 为实体对象数据集成本地一对一关联数据。
      *
-     * @param dataObject 实体对象。
-     * @param withDict   关联从表数据后，是否把从表的字典数据也一起关联了。
+     * @param dataObject   实体对象。
+     * @param withDict     关联从表数据后，是否把从表的字典数据也一起关联了。
+     * @param ignoreFields 该集合中的字段，即便包含注解也不会在当前调用中进行数据组装。
      * @throws RemoteDataBuildException ignoreRpcError()方法返回false，同时远程服务调用出现错误时抛出此异常。
      */
-    private void buildOneToOneForData(M dataObject, boolean withDict) {
+    private void buildOneToOneForData(M dataObject, boolean withDict, Set<String> ignoreFields) {
         if (dataObject == null || CollectionUtils.isEmpty(this.localRelationOneToOneStructList)) {
             return;
         }
         for (LocalRelationStruct relationStruct : this.localRelationOneToOneStructList) {
+            if (ignoreFields != null && ignoreFields.contains(relationStruct.relationField.getName())) {
+                continue;
+            }
             Object id = ReflectUtil.getFieldValue(dataObject, relationStruct.masterIdField);
             if (id != null) {
                 BaseService<Object, Object> relationService = relationStruct.localService;
@@ -1244,11 +1350,11 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
                     BaseService<Object, Object> proxyTarget =
                             (BaseService<Object, Object>) AopTargetUtil.getTarget(relationService);
                     // 关联常量字典
-                    proxyTarget.buildConstDictForData(relationObject);
+                    proxyTarget.buildConstDictForData(relationObject, ignoreFields);
                     // 关联本地字典。
-                    proxyTarget.buildDictForData(relationObject, false);
+                    proxyTarget.buildDictForData(relationObject, false, ignoreFields);
                     // 关联远程字典。
-                    proxyTarget.buildRemoteDictForData(relationObject, false);
+                    proxyTarget.buildRemoteDictForData(relationObject, false, ignoreFields);
                 }
             }
         }
@@ -1257,13 +1363,17 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
     /**
      * 为实体对象参数列表数据集成本地一对多关联数据。
      *
-     * @param resultList 实体对象数据列表。
+     * @param resultList   实体对象数据列表。
+     * @param ignoreFields 该集合中的字段，即便包含注解也不会在当前调用中进行数据组装。
      */
-    private void buildOneToManyForDataList(List<M> resultList) {
+    private void buildOneToManyForDataList(List<M> resultList, Set<String> ignoreFields) {
         if (CollectionUtils.isEmpty(this.localRelationOneToManyStructList) || CollectionUtils.isEmpty(resultList)) {
             return;
         }
         for (LocalRelationStruct relationStruct : this.localRelationOneToManyStructList) {
+            if (ignoreFields != null && ignoreFields.contains(relationStruct.relationField.getName())) {
+                continue;
+            }
             Set<Object> masterIdSet = resultList.stream()
                     .map(obj -> ReflectUtil.getFieldValue(obj, relationStruct.masterIdField))
                     .filter(Objects::nonNull)
@@ -1282,13 +1392,17 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
     /**
      * 为实体对象数据集成本地一对多关联数据。
      *
-     * @param dataObject 实体对象。
+     * @param dataObject   实体对象。
+     * @param ignoreFields 该集合中的字段，即便包含注解也不会在当前调用中进行数据组装。
      */
-    private void buildOneToManyForData(M dataObject) {
+    private void buildOneToManyForData(M dataObject, Set<String> ignoreFields) {
         if (dataObject == null || CollectionUtils.isEmpty(this.localRelationOneToManyStructList)) {
             return;
         }
         for (LocalRelationStruct relationStruct : this.localRelationOneToManyStructList) {
+            if (ignoreFields != null && ignoreFields.contains(relationStruct.relationField.getName())) {
+                continue;
+            }
             Object id = ReflectUtil.getFieldValue(dataObject, relationStruct.masterIdField);
             if (id != null) {
                 BaseService<Object, Object> relationService = relationStruct.localService;
@@ -1307,12 +1421,16 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
      * @param resultList       实体对象数据列表。
      * @param hasBuiltOneToOne 性能优化参数。如果该值为true，同时注解参数RelationDict.equalOneToOneRelationField
      *                         不为空，则直接从已经完成一对一数据关联的从表对象中获取数据，减少一次数据库交互。
+     * @param ignoreFields     该集合中的字段，即便包含注解也不会在当前调用中进行数据组装。
      */
-    private void buildDictForDataList(List<M> resultList, boolean hasBuiltOneToOne) {
+    private void buildDictForDataList(List<M> resultList, boolean hasBuiltOneToOne, Set<String> ignoreFields) {
         if (CollectionUtils.isEmpty(this.localRelationDictStructList) || CollectionUtils.isEmpty(resultList)) {
             return;
         }
         for (LocalRelationStruct relationStruct : this.localRelationDictStructList) {
+            if (ignoreFields != null && ignoreFields.contains(relationStruct.relationField.getName())) {
+                continue;
+            }
             List<Object> relationList = null;
             if (hasBuiltOneToOne && relationStruct.equalOneToOneRelationField != null) {
                 relationList = resultList.stream()
@@ -1340,12 +1458,16 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
      * @param dataObject       实体对象。
      * @param hasBuiltOneToOne 性能优化参数。如果该值为true，同时注解参数RelationDict.equalOneToOneRelationField
      *                         不为空，则直接从已经完成一对一数据关联的从表对象中获取数据，减少一次数据库交互。
+     * @param ignoreFields     该集合中的字段，即便包含注解也不会在当前调用中进行数据组装。
      */
-    private <T extends M> void buildDictForData(T dataObject, boolean hasBuiltOneToOne) {
+    private <T extends M> void buildDictForData(T dataObject, boolean hasBuiltOneToOne, Set<String> ignoreFields) {
         if (dataObject == null || CollectionUtils.isEmpty(this.localRelationDictStructList)) {
             return;
         }
         for (LocalRelationStruct relationStruct : this.localRelationDictStructList) {
+            if (ignoreFields != null && ignoreFields.contains(relationStruct.relationField.getName())) {
+                continue;
+            }
             Object relationObject = null;
             if (hasBuiltOneToOne && relationStruct.equalOneToOneRelationField != null) {
                 relationObject = ReflectUtil.getFieldValue(dataObject, relationStruct.equalOneToOneRelationField);
@@ -1365,9 +1487,10 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
      *
      * @param resultList      实体对象数据列表。
      * @param criteriaListMap 过滤参数。key为主表字段名称，value是过滤条件列表。
+     * @param ignoreFields    该集合中的字段，即便包含注解也不会在当前调用中进行数据组装。
      */
     private void buildManyToManyAggregationForDataList(
-            List<M> resultList, Map<String, List<MyWhereCriteria>> criteriaListMap) {
+            List<M> resultList, Map<String, List<MyWhereCriteria>> criteriaListMap, Set<String> ignoreFields) {
         if (CollectionUtils.isEmpty(this.localRelationManyToManyAggrStructList) || CollectionUtils.isEmpty(resultList)) {
             return;
         }
@@ -1375,6 +1498,9 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
             criteriaListMap = new HashMap<>(this.localRelationManyToManyAggrStructList.size());
         }
         for (LocalRelationStruct relationStruct : this.localRelationManyToManyAggrStructList) {
+            if (ignoreFields != null && ignoreFields.contains(relationStruct.relationField.getName())) {
+                continue;
+            }
             Set<Object> masterIdSet = resultList.stream()
                     .map(obj -> ReflectUtil.getFieldValue(obj, relationStruct.masterIdField))
                     .filter(Objects::nonNull)
@@ -1436,9 +1562,10 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
      *
      * @param resultList      实体对象数据列表。
      * @param criteriaListMap 过滤参数。key为主表字段名称，value是过滤条件列表。
+     * @param ignoreFields    该集合中的字段，即便包含注解也不会在当前调用中进行数据组装。
      */
     private void buildOneToManyAggregationForDataList(
-            List<M> resultList, Map<String, List<MyWhereCriteria>> criteriaListMap) {
+            List<M> resultList, Map<String, List<MyWhereCriteria>> criteriaListMap, Set<String> ignoreFields) {
         if (CollectionUtils.isEmpty(this.localRelationOneToManyAggrStructList) || CollectionUtils.isEmpty(resultList)) {
             return;
         }
@@ -1446,6 +1573,9 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
             criteriaListMap = new HashMap<>(localRelationOneToManyAggrStructList.size());
         }
         for (LocalRelationStruct relationStruct : this.localRelationOneToManyAggrStructList) {
+            if (ignoreFields != null && ignoreFields.contains(relationStruct.relationField.getName())) {
+                continue;
+            }
             Set<Object> masterIdSet = resultList.stream()
                     .map(obj -> ReflectUtil.getFieldValue(obj, relationStruct.masterIdField))
                     .filter(Objects::nonNull)
@@ -1491,9 +1621,10 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
      *
      * @param dataObject      实体对象。
      * @param criteriaListMap 过滤参数。key为主表字段名称，value是过滤条件列表。
+     * @param ignoreFields    该集合中的字段，即便包含注解也不会在当前调用中进行数据组装。
      */
     private <T extends M> void buildManyToManyAggregationForData(
-            T dataObject, Map<String, List<MyWhereCriteria>> criteriaListMap) {
+            T dataObject, Map<String, List<MyWhereCriteria>> criteriaListMap, Set<String> ignoreFields) {
         if (dataObject == null || CollectionUtils.isEmpty(this.localRelationManyToManyAggrStructList)) {
             return;
         }
@@ -1501,28 +1632,30 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
             criteriaListMap = new HashMap<>(localRelationManyToManyAggrStructList.size());
         }
         for (LocalRelationStruct relationStruct : this.localRelationManyToManyAggrStructList) {
-            Object masterIdValue = ReflectUtil.getFieldValue(dataObject, relationStruct.masterIdField);
-            if (masterIdValue == null) {
+            if (ignoreFields != null && ignoreFields.contains(relationStruct.relationField.getName())) {
                 continue;
             }
-            LocalAggregationRelationInfo basicRelationInfo =
-                    this.parseLocalAggregationRelationInfo(relationStruct, criteriaListMap);
-            // 组装过滤条件
-            String whereClause = this.makeManyToManyWhereClause(
-                    relationStruct, masterIdValue, basicRelationInfo, criteriaListMap);
-            StringBuilder tableNames = new StringBuilder(64);
-            tableNames.append(basicRelationInfo.relationTable);
-            if (!basicRelationInfo.onlySelectRelationTable) {
-                tableNames.append(", ").append(basicRelationInfo.slaveTable);
-            }
-            List<Map<String, Object>> aggregationMapList =
-                    mapper().getGroupedListByCondition(tableNames.toString(),
-                            basicRelationInfo.selectList, whereClause, basicRelationInfo.groupBy);
-            // 将查询后的结果回填到主表数据中。
-            if (CollectionUtils.isNotEmpty(aggregationMapList)) {
-                Object value = aggregationMapList.get(0).get(MyAggregationParam.VALUE_NAME);
-                if (value != null) {
-                    ReflectUtil.setFieldValue(dataObject, relationStruct.relationField, value);
+            Object masterIdValue = ReflectUtil.getFieldValue(dataObject, relationStruct.masterIdField);
+            if (masterIdValue != null) {
+                LocalAggregationRelationInfo basicRelationInfo =
+                        this.parseLocalAggregationRelationInfo(relationStruct, criteriaListMap);
+                // 组装过滤条件
+                String whereClause = this.makeManyToManyWhereClause(
+                        relationStruct, masterIdValue, basicRelationInfo, criteriaListMap);
+                StringBuilder tableNames = new StringBuilder(64);
+                tableNames.append(basicRelationInfo.relationTable);
+                if (!basicRelationInfo.onlySelectRelationTable) {
+                    tableNames.append(", ").append(basicRelationInfo.slaveTable);
+                }
+                List<Map<String, Object>> aggregationMapList =
+                        mapper().getGroupedListByCondition(tableNames.toString(),
+                                basicRelationInfo.selectList, whereClause, basicRelationInfo.groupBy);
+                // 将查询后的结果回填到主表数据中。
+                if (CollectionUtils.isNotEmpty(aggregationMapList)) {
+                    Object value = aggregationMapList.get(0).get(MyAggregationParam.VALUE_NAME);
+                    if (value != null) {
+                        ReflectUtil.setFieldValue(dataObject, relationStruct.relationField, value);
+                    }
                 }
             }
         }
@@ -1533,9 +1666,10 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
      *
      * @param dataObject      实体对象。
      * @param criteriaListMap 过滤参数。key为主表字段名称，value是过滤条件列表。
+     * @param ignoreFields    该集合中的字段，即便包含注解也不会在当前调用中进行数据组装。
      */
     private <T extends M> void buildOneToManyAggregationForData(
-            T dataObject, Map<String, List<MyWhereCriteria>> criteriaListMap) {
+            T dataObject, Map<String, List<MyWhereCriteria>> criteriaListMap, Set<String> ignoreFields) {
         if (dataObject == null || CollectionUtils.isEmpty(this.localRelationOneToManyAggrStructList)) {
             return;
         }
@@ -1543,29 +1677,31 @@ public abstract class BaseService<M, K> implements IBaseService<M, K> {
             criteriaListMap = new HashMap<>(localRelationOneToManyAggrStructList.size());
         }
         for (LocalRelationStruct relationStruct : this.localRelationOneToManyAggrStructList) {
-            Object masterIdValue = ReflectUtil.getFieldValue(dataObject, relationStruct.masterIdField);
-            if (masterIdValue == null) {
+            if (ignoreFields != null && ignoreFields.contains(relationStruct.relationField.getName())) {
                 continue;
             }
-            RelationOneToManyAggregation relation = relationStruct.relationOneToManyAggregation;
-            String slaveTable = MyModelUtil.mapToTableName(relation.slaveModelClass());
-            String slaveColumnName =
-                    MyModelUtil.mapToColumnName(relation.slaveIdField(), relation.slaveModelClass());
-            Tuple2<String, String> selectAndGroupByTuple = makeSelectListAndGroupByClause(
-                    slaveTable, slaveColumnName, relation.slaveModelClass(),
-                    slaveTable, relation.aggregationField(), relation.aggregationType());
-            String selectList = selectAndGroupByTuple.getFirst();
-            String groupBy = selectAndGroupByTuple.getSecond();
-            String whereClause = this.makeOneToManyWhereClause(
-                    relationStruct, masterIdValue, slaveColumnName, criteriaListMap);
-            // 获取分组聚合计算结果
-            List<Map<String, Object>> aggregationMapList =
-                    mapper().getGroupedListByCondition(slaveTable, selectList, whereClause, groupBy);
-            // 将计算结果回填到主表关联字段
-            if (CollectionUtils.isNotEmpty(aggregationMapList)) {
-                Object value = aggregationMapList.get(0).get(MyAggregationParam.VALUE_NAME);
-                if (value != null) {
-                    ReflectUtil.setFieldValue(dataObject, relationStruct.relationField, value);
+            Object masterIdValue = ReflectUtil.getFieldValue(dataObject, relationStruct.masterIdField);
+            if (masterIdValue != null) {
+                RelationOneToManyAggregation relation = relationStruct.relationOneToManyAggregation;
+                String slaveTable = MyModelUtil.mapToTableName(relation.slaveModelClass());
+                String slaveColumnName =
+                        MyModelUtil.mapToColumnName(relation.slaveIdField(), relation.slaveModelClass());
+                Tuple2<String, String> selectAndGroupByTuple = makeSelectListAndGroupByClause(
+                        slaveTable, slaveColumnName, relation.slaveModelClass(),
+                        slaveTable, relation.aggregationField(), relation.aggregationType());
+                String selectList = selectAndGroupByTuple.getFirst();
+                String groupBy = selectAndGroupByTuple.getSecond();
+                String whereClause = this.makeOneToManyWhereClause(
+                        relationStruct, masterIdValue, slaveColumnName, criteriaListMap);
+                // 获取分组聚合计算结果
+                List<Map<String, Object>> aggregationMapList =
+                        mapper().getGroupedListByCondition(slaveTable, selectList, whereClause, groupBy);
+                // 将计算结果回填到主表关联字段
+                if (CollectionUtils.isNotEmpty(aggregationMapList)) {
+                    Object value = aggregationMapList.get(0).get(MyAggregationParam.VALUE_NAME);
+                    if (value != null) {
+                        ReflectUtil.setFieldValue(dataObject, relationStruct.relationField, value);
+                    }
                 }
             }
         }
